<resources>
    <string name="app_name">PLL Master</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">PLL Master</string>
    <string name="nav_header_subtitle" translatable="false">pllmaster@google.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_training3">3 side</string>
    <string name="menu_training2beginner">2 side beginner</string>
    <string name="menu_training2advanced">2 side advanced</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_about_app">About App</string>
    <string name="about_app_version">v0.1.190318.1</string>
    <string name="about_contributors">Contributors</string>
    <string name="about_developer">Developed by Andrew Maslennikov</string>
    <string name="about_rate_app">Rate App in Google Play</string>
    <string name="about_send_feedback">Send e-mail to support</string>
</resources>
