<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutAppActivity"
        android:background="@drawable/ic_screen_background">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/cube"
            android:id="@+id/imageView3"
            android:contentDescription="TODO"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView3"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="@font/roboto_bold"
            android:textColor="@color/g_lightgrey"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:autoSizeStepGranularity="4sp"
            android:lines="1"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginRight="16dp"
            app:layout_constraintDimensionRatio="h,4:1"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/about_app_version"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView4"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/roboto_bold"
            android:textColor="@color/g_lightgrey"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginLeft="16dp"
            app:layout_constraintDimensionRatio="4:1"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/about_developer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView5"
            android:textSize="12sp"
            android:textColor="@color/g_lightgrey"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginBottom="16dp"/>
    <Button
            android:text="@string/about_contributors"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button"
            android:drawableLeft="@drawable/ic_group_add_black_24dp"
            android:drawablePadding="8dp"
            app:fontFamily="@font/roboto_bold"
            android:textColor="@color/g_black"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_group_add_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            android:layout_marginTop="4dp"
            android:paddingRight="8dp"

            android:textSize="12sp"
            app:autoSizeTextType="uniform"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            android:layout_marginBottom="4dp"
    />
    <Button
            android:text="@string/about_send_feedback"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button2"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="8dp"
            app:fontFamily="@font/roboto_bold"
            android:textColor="@color/g_black"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_email_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            android:padding="16dp"

            app:autoSizeTextType="uniform"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            android:layout_marginBottom="4dp"
            android:lines="2"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            android:textSize="4sp"
    />
    <Button
            android:text="@string/about_rate_app"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/button3"
            android:drawableLeft="@drawable/ic_grade_black_24dp"
            android:drawablePadding="8dp"


            app:fontFamily="@font/roboto_bold"
            android:textColor="@color/g_black"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_grade_black_24dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:padding="12dp"

            app:autoSizeTextType="none"
            app:autoSizePresetSizes="@array/autosize_text_sizes"

            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            android:textSize="6sp"/>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.8"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline4"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.7"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline3"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent=".9"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline5"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.8"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline6"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline7"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.32"
                                                app:layout_constraintTop_toTopOf="parent"
                                                android:layout_marginTop="196dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>